--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- these tags are use for seo purpose  -->
+    <nav></nav>
+    <section></section>
+    <article></article>
+    <aside></aside>
+    <main></main>
+
 </body>
 </html>
