--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <!-- these tags are use for seo purpose  -->
-    <nav></nav>
-    <section></section>
-    <article></article>
-    <aside></aside>
-    <main></main>
+  <!-- these tags are use for seo purpose  -->
+  <header></header>
+  <nav></nav>
+  <section></section>
+  <article></article>
+  <aside></aside>
+  <main></main>
+  <footer></footer>
 
 </body>
+
 </html>
